[workspace]
resolver = "2"
members = [
    "proton_arp",
    "proton_mac",
    "proton_nat",
    "proton_nif",
]

[package]
name = "proton"
version = "0.1.0"
edition = "2021"

[dependencies.proton_arp]
path = "proton_arp"

[dependencies.proton_mac]
path = "proton_mac"

[dependencies.proton_nat]
path = "proton_nat"

[dependencies.proton_nif]
path = "proton_nif"