[workspace]
resolver = "2"
members = [
    "proton_arp",
    "proton_dev",
    "proton_mac",
    "proton_nat",
    "proton_nif",
    "proton_wap",
]

[package]
name = "proton"
version = "0.1.0"
edition = "2021"

[dependencies]
cidr = "0.2.3"

[dependencies.pnet]
version = "0.35.0"

[dependencies.proton_arp]
path = "proton_arp"

[dependencies.proton_dev]
path = "proton_dev"

[dependencies.proton_mac]
path = "proton_mac"

[dependencies.proton_nat]
path = "proton_nat"

[dependencies.proton_nif]
path = "proton_nif"

[dependencies.proton_wap]
path = "proton_wap"
