[workspace]
resolver = "2"
members = [
    "proton_arp",
    "proton_dev",
    "proton_err",
    "proton_mac",
    "proton_nif",
    "proton_wap",
]

[package]
name = "proton"
version = "0.1.0"
edition = "2021"

[dependencies]
cidr = "0.2.3"

[dependencies.pnet]
version = "0.35.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.proton_arp]
path = "proton_arp"

[dependencies.proton_err]
path = "proton_err"

[dependencies.proton_dev]
path = "proton_dev"

[dependencies.proton_mac]
path = "proton_mac"

[dependencies.proton_nif]
path = "proton_nif"
features = ["cndn"]

[dependencies.proton_wap]
path = "proton_wap"
