[package]
name = "proton_wap"
version = "0.1.0"
edition = "2021"

[lib]
name = "proton_wap"
path = "src/lib.rs"

[dependencies]
cidr = "0.2.3"

[dependencies.pnet]
version = "0.35.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.proton_mac]
path = "../proton_mac"

[dependencies.proton_nif]
path = "../proton_nif"
