[package]
name = "proton_wap"
version = "0.1.0"
edition = "2021"

[lib]
name = "proton_wap"
path = "src/lib.rs"

[dependencies]

[dependencies.network-manager]
# TODO: this repo is a fork of an existing repo, once PR is approved we will change this to the existing repo
git = "https://github.com/adom-inc/network-manager"

[dependencies.pnet]
version = "0.35.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.proton_cfg]
path = "../proton_cfg"

[dependencies.proton_dev]
path = "../proton_dev"

[dependencies.proton_err]
path = "../proton_err"

[dependencies.proton_mac]
path = "../proton_mac"

[dependencies.proton_nif]
path = "../proton_nif"
